[metadata]
license_files = LICENSE.txt

[tool:pytest]
testpaths = tests
log_cli = true
log_cli_level = WARNING
filterwarnings = 
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore::DeprecationWarning

[flake8]
max-line-length = 100
exclude = 
    .direnv, .venv, venv
ignore = 
    E203

[mypy]
ignore_missing_imports = true

[tool:isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true